refactor(templates/node-angular): streamline gitignore and remove duplicate SVG
- Merged  from Angular CLI with our custom  for a unified approach.
- Removed 'oracle-icon(2).svg' to avoid redundancy as only one icon is needed for the main page presentation.

Closes #48

--- a/templates/node-angular/.gitignore.template
+++ b/templates/node-angular/.gitignore.template
@@ -1,22 +1,60 @@
-# Logs
-logs
-*.log
-npm-debug.log*
+# See http://help.github.com/ignore-files/ for more about ignoring files.
+
+# Compiled output
+/dist
+/tmp
+/out-tsc
+/bazel-out
+/dist-ssr
+
+# Node
+/node_modules
+npm-debug.log
+yarn-error.log
 yarn-debug.log*
-yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
+# IDEs and editors
+.idea/
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
 *.local
 
-# Editor directories and files
-.DS_Store
+# Visual Studio Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
 
+# Miscellaneous
+/.angular/cache
+.sass-cache/
+/connect.lock
+/coverage
+/libpeerconnection.log
+testem.log
+/typings
+/server/utils/db/wallet
+
+# System files
+.DS_Store
+Thumbs.db
+
+# Logs
+logs
+*.log
+
+# Environment variables
 /.env
 /.env.*
 !/.env.example
 !/.env.*.example
-/server/utils/db/wallet
+
+# Editor directories and files
+.history/*
