--- a/templates/node-vanilla/package.json
+++ b/templates/node-vanilla/package.json
@@ -7,18 +7,21 @@
   "scripts": {
     "dev": "concurrently --names server,client --prefix-colors blue,yellow --success all --kill-others 'node ./server/index.cjs' 'vite'",
     "build": "vite build",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives",
     "preview": "vite preview"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "eslint": "^8.57.0",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
     "oracledb": "^6.2.0"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
+    "eslint-plugin-node": "^11.1.0",
     "vite": "^5.0.8"
   }
 }
