--- a/templates/node-vue/package.json
+++ b/templates/node-vue/package.json
@@ -6,20 +6,24 @@
   "scripts": {
     "dev": "concurrently --names server,client --prefix-colors blue,yellow --success all --kill-others 'node ./server/index.cjs' 'vite'",
     "build": "vite build",
+    "lint": "eslint . --ext js,jsx,vue --report-unused-disable-directives",
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.3.11",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
-    "oracledb": "^6.2.0"
+    "oracledb": "^6.2.0",
+    "vue": "^3.3.11"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
     "concurrently": "^8.2.2",
+    "eslint": "^8.57.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-vue": "^9.22.0",
     "vite": "^5.0.8"
   }
 }
