--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   ],
   "license": "UPL-1.0",
   "type": "module",
+  "main": "src/index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/oracle/create-database-app.git"
