--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "@inquirer/prompts": "3.3.2",
     "@oclif/core": "3.27.0",
     "@oclif/plugin-help": "5.2.20",
-    "@oclif/plugin-plugins": "4.1.10",
+    "@oclif/plugin-plugins": "^5.3.7",
     "extract-zip": "2.0.1",
     "inquirer": "9.2.12",
     "untildify": "5.0.0",
