--- a/package.json
+++ b/package.json
@@ -62,15 +62,15 @@
     "version": "oclif readme && git add README.md && run-s build"
   },
   "dependencies": {
-    "@inquirer/prompts": "3.3.2",
-    "@oclif/core": "3.27.0",
-    "@oclif/plugin-help": "5.2.20",
+    "@inquirer/prompts": "^3.3.2",
+    "@oclif/core": "^3.27.0",
+    "@oclif/plugin-help": "^5.2.20",
     "@oclif/plugin-plugins": "^5.3.7",
-    "extract-zip": "2.0.1",
-    "inquirer": "9.3.6",
-    "untildify": "5.0.0",
-    "yeoman-environment": "3.19.3",
-    "yeoman-generator": "5.10.0"
+    "extract-zip": "^2.0.1",
+    "inquirer": "^9.3.6",
+    "untildify": "^5.0.0",
+    "yeoman-environment": "^3.19.3",
+    "yeoman-generator": "^5.10.0"
   },
   "bundledDependencies": [
     "@inquirer/prompts",
@@ -86,15 +86,15 @@
   "devDependencies": {
     "@commitlint/cli": "^18.4.3",
     "@commitlint/config-conventional": "^18.4.3",
-    "@oclif/prettier-config": "0.2.1",
-    "@oclif/test": "3.2.15",
+    "@oclif/prettier-config": "^0.2.1",
+    "@oclif/test": "^3.2.15",
     "@types/chai": "^4",
     "@types/fs-extra": "^11.0.4",
     "@types/mocha": "^10",
     "@types/node": "^18",
     "@types/yeoman-generator": "^5.2.14",
     "chai": "^4",
-    "dotenv-cli": "7.4.2",
+    "dotenv-cli": "^7.4.2",
     "eslint": "^8",
     "eslint-config-oclif": "^5",
     "eslint-config-oclif-typescript": "^3",
@@ -105,7 +105,7 @@
     "nodemon": "^3.0.3",
     "npm-run-all": "^4.1.5",
     "oclif": "4.11.3",
-    "shx": "0.3.4",
+    "shx": "^0.3.4",
     "ts-node": "^10.9.1",
     "typescript": "^5"
   }
