--- a/templates/node-jet/package.json
+++ b/templates/node-jet/package.json
@@ -21,10 +21,10 @@
     "concurrently": "^8.2.2",
     "extract-zip": "^1.7.0",
     "fs-extra": "^8.1.0",
-    "glob": "7.2.0",
-    "typescript": "5.3.2",
+    "glob": "^7.2.0",
+    "typescript": "^5.3.2",
     "underscore": "^1.10.2",
-    "yargs-parser": "13.1.2"
+    "yargs-parser": "^13.1.2"
   },
   "engines": {
     "node": ">=12.21.0"
