--- a/templates/node-jet/package.json
+++ b/templates/node-jet/package.json
@@ -3,31 +3,35 @@
   "version": "1.0.0",
   "description": "An Oracle JavaScript Extension Toolkit(JET) web app",
   "scripts": {
-    "dev": "concurrently --names server,client --prefix-colors blue,yellow --success all --kill-others 'node ./server/index.cjs' 'ojet serve --server-only'"
+    "dev": "concurrently --names server,client --prefix-colors blue,yellow --success all --kill-others 'node ./server/index.cjs' 'ojet serve --server-only'",
+    "lint": "eslint src/ --max-warnings 0"
   },
   "dependencies": {
-    "@oracle/oraclejet": "~16.1.0",
-    "@oracle/oraclejet-core-pack": "~16.1.0",
+    "@oracle/oraclejet": "~17.0.1",
+    "@oracle/oraclejet-core-pack": "~17.0.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "http-proxy-middleware": "^3.0.0",
     "morgan": "^1.10.0",
-    "oracledb": "^6.2.0"
+    "oracledb": "^6.6.0"
   },
   "devDependencies": {
-    "@oracle/ojet-cli": "~16.1.0",
+    "@oracle/ojet-cli": "~17.0.0",
     "concurrently": "^8.2.2",
-    "extract-zip": "^1.7.0",
-    "fs-extra": "^8.1.0",
-    "glob": "^7.2.0",
-    "typescript": "^5.3.2",
-    "underscore": "^1.10.2",
-    "yargs-parser": "^13.1.2"
+    "extract-zip": "^2.0.1",
+    "fs-extra": "^11.2.0",
+    "glob": "^11.0.0",
+    "typescript": "^5.5.4",
+    "underscore": "^1.13.7",
+    "yargs-parser": "21.1.1",
+    "eslint": "^9.9.1",
+    "@eslint/js": "^9.9.1",
+    "typescript-eslint": "8.3.0"
   },
   "engines": {
-    "node": ">=12.21.0"
+    "node": ">=16.0.0"
   },
   "private": true
 }
