--- a/templates/ords-concert-app/package.json
+++ b/templates/ords-concert-app/package.json
@@ -33,53 +33,51 @@
   "type": "module",
   "dependencies": {
     "@auth0/auth0-react": "2.2.4",
-    "@emotion/cache": "^11.11.0",
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@mui/icons-material": "^5.15.18",
-    "@mui/material": "^5.15.18",
-    "@remix-run/css-bundle": "2.6.0",
-    "@remix-run/node": "2.6.0",
-    "@remix-run/react": "2.6.0",
-    "@remix-run/serve": "2.6.0",
+    "@emotion/cache": "^11.13.0",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "6.0.2",
+    "@mui/material": "6.0.2",
+    "@remix-run/css-bundle": "2.11.2",
+    "@remix-run/node": "2.11.2",
+    "@remix-run/react": "2.11.2",
+    "@remix-run/serve": "2.11.2",
     "dotenv": "^16.4.5",
-    "embla-carousel": "^8.1.3",
-    "embla-carousel-react": "^8.1.3",
+    "embla-carousel": "^8.2.0",
+    "embla-carousel-react": "^8.2.0",
     "isbot": "4",
     "isomorphic-dompurify": "^2.13.0",
-    "material-ui-popup-state": "^5.1.2",
+    "material-ui-popup-state": "^5.3.1",
     "node-fetch": "3.3.2",
-    "react": "18.2.0",
-    "react-datepicker": "^7.3.0",
-    "react-dom": "18.2.0",
-    "react-icons": "5.2.1",
-    "react-slick": "^0.30.2",
-    "remix-auth": "3.6.0",
+    "react": "18.3.1",
+    "react-datepicker": "7.3.0",
+    "react-dom": "18.3.1",
+    "remix-auth": "3.7.0",
     "remix-auth-auth0": "1.10.0"
   },
   "devDependencies": {
-    "@remix-run/dev": "2.6.0",
-    "@svgr/cli": "^8.1.0",
-    "@svgr/plugin-jsx": "^8.1.0",
-    "@svgr/plugin-prettier": "^8.1.0",
-    "@svgr/plugin-svgo": "^8.1.0",
-    "@types/react": "18.2.20",
-    "@types/react-dom": "18.2.7",
-    "@typescript-eslint/eslint-plugin": "^7.15.0",
-    "@typescript-eslint/parser": "^7.15.0",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^8.57.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-airbnb-typescript": "^18.0.0",
+    "@remix-run/dev": "2.11.2",
+    "@svgr/cli": "8.1.0",
+    "@svgr/plugin-jsx": "8.1.0",
+    "@svgr/plugin-prettier": "8.1.0",
+    "@svgr/plugin-svgo": "8.1.0",
+    "@types/react": "18.3.0",
+    "@types/react-dom": "18.3.0",
+    "@typescript-eslint/eslint-plugin": "7.15.0",
+    "@typescript-eslint/parser": "7.15.0",
+    "autoprefixer": "10.4.19",
+    "eslint": "8.57.0",
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-config-airbnb-base": "15.0.0",
+    "eslint-config-airbnb-typescript": "18.0.0",
     "eslint-import-resolver-typescript": "3.6.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jsdoc": "^48.7.0",
-    "eslint-plugin-jsx-a11y": "^6.9.0",
-    "eslint-plugin-react": "^7.34.3",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-tailwindcss": "^3.17.4",
-    "eslint-plugin-tsdoc": "^0.2.17",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-jsdoc": "48.7.0",
+    "eslint-plugin-jsx-a11y": "6.9.0",
+    "eslint-plugin-react": "7.34.3",
+    "eslint-plugin-react-hooks": "4.6.2",
+    "eslint-plugin-tailwindcss": "3.17.4",
+    "eslint-plugin-tsdoc": "0.2.17",
     "postcss": "8.4.38",
     "tailwindcss": "3.4.3",
     "typescript": "5.1.6"
