chore: add comments to .env.example

--- a/templates/ords-remix-jwt-sample/.env.example
+++ b/templates/ords-remix-jwt-sample/.env.example
@@ -2,17 +2,24 @@
 # All rights reserved
 # Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl/
 
+# We refer to some variables as Autonomous Database specific 
+# but you can use whichever ORDS URL you want/have as well as the user, 
+# as long as this user is capable of creating and REST Enabling other schemas.
 ADB_ORDS_URL=https://example.com:8080/ords/
 ADB_ADMIN_USER=username
-ADB_ADMIN_PASSWORD=password
+ADB_ADMIN_PASSWORD=
 
+# The name of the schema that will be created to host all of the 
+# ORDS Concert App database objects.
 SCHEMA_NAME=ORDS_CONCERT_APP
-SCHEMA_PASSWORD=SuperS3curePsswd
+SCHEMA_PASSWORD=
 
+# Your Auth0 tenant JWT credentials, used by ORDS to validate request to protected endpoints.
 JWT_ISSUER=https://my-domain.auth0.com/
 JWT_VERIFICATION_KEY=https://my-domain.auth0.com/oauth/token/.well-known/jwks.json
 JWT_AUDIENCE=https://concert.sample.app
 
+# Auth0 Authentication app configuration parameters specific of the sample app.
 AUTH0_RETURN_TO_URL=http://localhost:3000
 AUTH0_CALLBACK_URL=http://localhost:3000/callback
 AUTH0_CLIENT_ID=auth0_client_id
