--- a/templates/ords-remix-jwt-sample/package.json
+++ b/templates/ords-remix-jwt-sample/package.json
@@ -4,7 +4,7 @@
   "description": "ORDS sample application",
   "main": "index.js",
   "scripts": {
-    "build": "remix build",
+    "build": "remix vite:build",
     "migrate": "node ./ords/migrate.js",
     "seed": "node ./ords/seed.js",
     "drop": "node ./ords/drop.js",
@@ -14,10 +14,10 @@
     "lint:frontend": "eslint ./app --ext .js,.jsx,.ts,.tsx",
     "lint:backend": "eslint ./ords --ext .js,.ts",
     "lint": "npm run lint:frontend && npm run lint:backend",
-    "start": "remix-serve ./build/index.js",
+    "start": "remix-serve ./build/server/index.js",
     "typecheck": "tsc",
     "icons": "npx @svgr/cli --out-dir app/components/icons -- app/assets/icons",
-    "dev": "remix dev --manual"
+    "dev": "remix vite:dev"
   },
   "watch": {
     "icons": {
@@ -32,16 +32,15 @@
   "license": "UPL-1.0",
   "type": "module",
   "dependencies": {
-    "@auth0/auth0-react": "2.2.4",
     "@emotion/cache": "^11.13.0",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "6.0.2",
     "@mui/material": "6.0.2",
-    "@remix-run/css-bundle": "2.13.1",
-    "@remix-run/node": "2.13.1",
-    "@remix-run/react": "2.13.1",
-    "@remix-run/serve": "2.13.1",
+    "@remix-run/dev": "2.15.2",
+    "@remix-run/node": "2.15.2",
+    "@remix-run/react": "2.15.2",
+    "@remix-run/serve": "2.15.2",
     "dotenv": "^16.4.5",
     "embla-carousel": "^8.2.0",
     "embla-carousel-react": "^8.2.0",
@@ -49,14 +48,14 @@
     "isomorphic-dompurify": "^2.13.0",
     "material-ui-popup-state": "^5.3.1",
     "node-fetch": "3.3.2",
-    "react": "18.3.1",
+    "react": "18.3.0-canary-01ab35a9a-20240228",
     "react-datepicker": "7.3.0",
-    "react-dom": "18.3.1",
+    "react-dom": "18.3.0-canary-01ab35a9a-20240228",
     "remix-auth": "3.7.0",
-    "remix-auth-auth0": "1.10.0"
+    "remix-auth-auth0": "1.10.0",
+    "vite": "5.4.11"
   },
   "devDependencies": {
-    "@remix-run/dev": "2.13.1",
     "@svgr/cli": "8.1.0",
     "@svgr/plugin-jsx": "8.1.0",
     "@svgr/plugin-prettier": "8.1.0",
@@ -80,6 +79,11 @@
     "eslint-plugin-tsdoc": "0.2.17",
     "postcss": "8.4.47",
     "tailwindcss": "3.4.3",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "vite-tsconfig-paths": "^5.1.4"
+  },
+  "overrides": {
+    "react": "18.3.0-canary-01ab35a9a-20240228",
+    "react-dom": "18.3.0-canary-01ab35a9a-20240228"
   }
 }
