--- a/templates/ords-remix-jwt-sample/package.json
+++ b/templates/ords-remix-jwt-sample/package.json
@@ -32,6 +32,7 @@
   "license": "UPL-1.0",
   "type": "module",
   "dependencies": {
+    "@auth0/auth0-react": "2.2.4",
     "@emotion/cache": "^11.13.0",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
@@ -48,9 +49,9 @@
     "isomorphic-dompurify": "^2.13.0",
     "material-ui-popup-state": "^5.3.1",
     "node-fetch": "3.3.2",
-    "react": "18.3.0-canary-01ab35a9a-20240228",
+    "react": "18.3.1",
     "react-datepicker": "7.3.0",
-    "react-dom": "18.3.0-canary-01ab35a9a-20240228",
+    "react-dom": "18.3.1",
     "remix-auth": "3.7.0",
     "remix-auth-auth0": "1.10.0",
     "vite": "5.4.11"
@@ -81,9 +82,5 @@
     "tailwindcss": "3.4.3",
     "typescript": "5.1.6",
     "vite-tsconfig-paths": "^5.1.4"
-  },
-  "overrides": {
-    "react": "18.3.0-canary-01ab35a9a-20240228",
-    "react-dom": "18.3.0-canary-01ab35a9a-20240228"
   }
 }
