--- a/package.json
+++ b/package.json
@@ -53,13 +53,13 @@
     "postpack": "shx rm -f oclif.manifest.json",
     "posttest": "npm run lint",
     "prepack": "npm run build && oclif manifest && oclif readme",
-    "pre_dev": "run-s -s build",
-    "predebug": "run-s -s build",
+    "pre_dev": "npm run --silent build",
+    "predebug": "npm run --silent build",
     "prepare:build": "npm run build",
     "prepare:husky": "husky install",
-    "prepare": "run-s -s prepare:*",
+    "prepare": "npm run --silent prepare:build && npm run --silent prepare:husky",
     "test": "mocha --forbid-only \"test/**/*.test.ts\"",
-    "version": "oclif readme && git add README.md && run-s build"
+    "version": "oclif readme && git add README.md && npm run build"
   },
   "dependencies": {
     "@inquirer/prompts": "^3.3.2",
@@ -84,8 +84,8 @@
     "yeoman-generator"
   ],
   "devDependencies": {
-    "@commitlint/cli": "^18.4.3",
-    "@commitlint/config-conventional": "^18.4.3",
+    "@commitlint/cli": "^19.6.1",
+    "@commitlint/config-conventional": "^19.6.0",
     "@oclif/prettier-config": "^0.2.1",
     "@oclif/test": "^4.0.9",
     "@types/chai": "^4",
@@ -94,7 +94,7 @@
     "@types/node": "^22",
     "@types/yeoman-generator": "^5.2.14",
     "chai": "^4",
-    "dotenv-cli": "^7.4.2",
+    "dotenv-cli": "^8.0.0",
     "eslint": "^8",
     "eslint-config-oclif": "^5",
     "eslint-config-oclif-typescript": "^3",
@@ -103,7 +103,6 @@
     "husky": "^8.0.3",
     "mocha": "^10",
     "nodemon": "^3.0.3",
-    "npm-run-all": "^4.1.5",
     "oclif": "4.11.3",
     "shx": "^0.3.4",
     "ts-node": "^10.9.1",
