--- a/templates/node-jet/package.json
+++ b/templates/node-jet/package.json
@@ -7,28 +7,28 @@
     "lint": "eslint src/ --max-warnings 0"
   },
   "dependencies": {
-    "@oracle/oraclejet": "~17.0.1",
-    "@oracle/oraclejet-core-pack": "~17.0.1",
-    "body-parser": "^1.20.2",
+    "@oracle/oraclejet": "~17.1.0",
+    "@oracle/oraclejet-core-pack": "~17.1.0",
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "http-proxy-middleware": "^3.0.0",
-    "morgan": "^1.10.0",
-    "oracledb": "^6.6.0"
+    "dotenv": "16.4.7",
+    "express": "4.21.2",
+    "http-proxy-middleware": "3.0.3",
+    "morgan": "1.10.0",
+    "oracledb": "6.7.1"
   },
   "devDependencies": {
-    "@oracle/ojet-cli": "~17.0.0",
-    "concurrently": "^8.2.2",
-    "extract-zip": "^2.0.1",
-    "fs-extra": "^11.2.0",
-    "glob": "^11.0.0",
-    "typescript": "^5.5.4",
-    "underscore": "^1.13.7",
-    "yargs-parser": "21.1.1",
-    "eslint": "^9.9.1",
-    "@eslint/js": "^9.9.1",
-    "typescript-eslint": "8.3.0"
+    "@oracle/ojet-cli": "~17.1.0",
+    "extract-zip": "^1.7.0",
+    "fs-extra": "^8.1.0",
+    "glob": "10.4.5",
+    "typescript": "5.4.5",
+    "underscore": "^1.10.2",
+    "yargs-parser": "13.1.2",
+    "concurrently": "^9.1.2",
+    "eslint": "^9.18.0",
+    "@eslint/js": "^9.18.0",
+    "typescript-eslint": "8.20.0"
   },
   "engines": {
     "node": ">=16.0.0"
