--- a/templates/node-vanilla/package.json
+++ b/templates/node-vanilla/package.json
@@ -7,21 +7,23 @@
   "scripts": {
     "dev": "concurrently --names server,client --prefix-colors blue,yellow --success all --kill-others 'node ./server/index.cjs' 'vite'",
     "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives",
+    "lint": "eslint --report-unused-disable-directives",
     "preview": "vite preview"
   },
   "dependencies": {
-    "body-parser": "^1.20.2",
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "eslint": "^9.9.1",
-    "express": "^4.18.2",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "morgan": "^1.10.0",
-    "oracledb": "^6.2.0"
+    "oracledb": "^6.7.1"
   },
   "devDependencies": {
-    "concurrently": "^8.2.2",
-    "eslint-plugin-node": "^11.1.0",
-    "vite": "^5.0.8"
+    "concurrently": "^9.1.2",
+    "eslint": "^9.18.0",
+    "@eslint/js": "^9.18.0",
+    "eslint-plugin-n": "^17.15.1",
+    "globals": "15.14.0",
+    "vite": "^6.0.7"
   }
 }
