--- a/templates/node-angular/package.json
+++ b/templates/node-angular/package.json
@@ -2,48 +2,52 @@
   "name": "<%= appName %>",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
     "dev": "concurrently --names 'angular,server' --prefix-colors 'green,blue' --kill-others --success first 'ng serve' 'node server/index.cjs'",
+    "lint": "eslint --report-unused-disable-directives",
+    "ng": "ng",
+    "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "lint": "eslint . --max-warnings 0"
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.2.2",
-    "@angular/common": "^18.2.2",
-    "@angular/compiler": "^18.2.2",
-    "@angular/core": "^18.2.2",
-    "@angular/forms": "^18.2.2",
-    "@angular/platform-browser": "^18.2.2",
-    "@angular/platform-browser-dynamic": "^18.2.2",
-    "@angular/router": "^18.2.2",
-    "rxjs": "~7.8.1",
-    "tslib": "^2.7.0",
-    "zone.js": "~0.14.10",
-    "body-parser": "^1.20.2",
+    "@angular/animations": "^19.1.0",
+    "@angular/common": "^19.1.0",
+    "@angular/compiler": "^19.1.0",
+    "@angular/core": "^19.1.0",
+    "@angular/forms": "^19.1.0",
+    "@angular/platform-browser": "^19.1.0",
+    "@angular/platform-browser-dynamic": "^19.1.0",
+    "@angular/router": "^19.1.0",
+    "rxjs": "~7.8.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.15.0",
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "morgan": "^1.10.0",
-    "oracledb": "^6.6.0"
+    "oracledb": "^6.7.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.2.2",
-    "@angular/cli": "^18.2.2",
-    "@angular/compiler-cli": "^18.2.2",
-    "@types/jasmine": "~5.1.4",
-    "jasmine-core": "~5.2.0",
-    "karma": "~6.4.4",
+    "@angular-devkit/build-angular": "^19.1.3",
+    "@angular/cli": "^19.1.3",
+    "@angular/compiler-cli": "^19.1.0",
+    "@types/jasmine": "~5.1.0",
+    "jasmine-core": "~5.5.0",
+    "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.1",
+    "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.5.4",
-    "concurrently": "^8.2.2",
-    "eslint": "^9.9.1",
-    "@eslint/js": "^9.9.1",
-    "typescript-eslint": "8.3.0"
+    "typescript": "~5.7.2",
+    "concurrently": "^9.1.2",
+    "eslint": "^9.18.0",
+    "@eslint/js": "^9.18.0",
+    "eslint-plugin-n": "^17.15.1",
+    "@typescript-eslint/eslint-plugin": "^8.21.0",
+    "@typescript-eslint/parser": "^8.21.0",
+    "globals": "15.14.0"
   }
 }
