--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@oracle/create-database-app",
-  "version": "1.3.1",
+  "version": "1.4.0",
   "description": "Create an Oracle Database Application from a Template",
   "author": "Oracle Corporation",
   "keywords": [
@@ -107,5 +107,8 @@
     "shx": "^0.3.4",
     "ts-node": "^10.9.1",
     "typescript": "^5"
+  },
+  "overrides": {
+    "whatwg-url": "^14.1.0"
   }
 }
