--- a/templates/app/.env.example.basic
+++ b/templates/app/.env.example.basic
@@ -8,3 +8,5 @@ CONNECT_STRING=<%= connectionString %>
 # Optional HTTP Proxy Settings
 # HTTPS_PROXY=
 # HTTPS_PROXY_PORT=
+
+SQL_CL_PATH=<%= sqlclPath %>
