feat: addressing review comments

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -188,3 +188,8 @@ updates:
       - "templates-ords-remix"
     commit-message:
       prefix: fix(deps)
+
+  - package-ecosystem: "npm" 
+    directory: "/templates/mle-app/"
+    schedule:
+      interval: "monthly"
