--- a/templates/mle-app/.env.example
+++ b/templates/mle-app/.env.example
@@ -8,3 +8,5 @@ CONNECT_STRING=<%= connectionString %>
 # Optional HTTP Proxy Settings
 # HTTPS_PROXY=
 # HTTPS_PROXY_PORT=
+
+SQL_CL_PATH=<%= sqlclPath %>
