--- a/templates/mle-app/tsconfig.json
+++ b/templates/mle-app/tsconfig.json
@@ -1,9 +1,11 @@
 {
     "compilerOptions": {
       "module": "ESNext",
-      "target": "ES2020",
+      "target": "ES2021",
       "outDir": "dist",
-      "skipLibCheck": true,
+      "lib": ["es6", "es2017", "es2021"],
+      "types": [],
+      "noImplicitAny": true,
       "strict": true,
       "sourceMap": true
     },
