feat: enable the use of wallets and Autonomous DB

--- a/templates/mle-app/.env.example
+++ b/templates/mle-app/.env.example
@@ -1,12 +1,19 @@
+# Path to database wallet
+WALLET_PATH=<%= walletPath %>
+
+
 # Database User
 DB_USER=<%= connectionUsername %>
-# Database User
+# Database User Password
 DB_PASSWORD=<%= connectionPassword %>
-# Connection string to your ADB instance
+# Connection string to your Autonomous Database/
+# Oracle Database Free instance
 CONNECT_STRING=<%= connectionString %>
 
 # Optional HTTP Proxy Settings
 # HTTPS_PROXY=
 # HTTPS_PROXY_PORT=
 
+# Path to your local SQL Developer Command Line
+# installation
 SQL_CL_PATH=<%= sqlclPath %>
