--- a/templates/node-jet/package.json
+++ b/templates/node-jet/package.json
@@ -4,34 +4,31 @@
   "description": "An Oracle JavaScript Extension Toolkit(JET) web app",
   "scripts": {
     "dev": "concurrently --names server,client --prefix-colors blue,yellow --success all --kill-others 'node ./server/index.cjs' 'ojet serve --server-only'",
-    "lint": "eslint --report-unused-disable-directives"
+    "lint": "eslint src/ --max-warnings 0"
   },
   "dependencies": {
-    "@oracle/oraclejet": "~17.1.0",
-    "@oracle/oraclejet-core-pack": "~17.1.0",
-    "body-parser": "^1.20.3",
+    "@oracle/oraclejet": "~18.0.0",
+    "@oracle/oraclejet-core-pack": "~18.0.0",
+    "body-parser": "^2.2.0",
     "cors": "^2.8.5",
-    "dotenv": "16.4.7",
-    "express": "4.21.2",
-    "http-proxy-middleware": "3.0.3",
-    "morgan": "1.10.0",
-    "oracledb": "6.7.1"
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "http-proxy-middleware": "^3.0.5",
+    "morgan": "^1.10.0",
+    "oracledb": "^6.8.0"
   },
   "devDependencies": {
-    "@oracle/ojet-cli": "~17.1.0",
+    "@eslint/js": "^9.24.0",
+    "@oracle/ojet-cli": "~18.0.0",
+    "concurrently": "^9.1.2",
+    "eslint": "^9.24.0",
     "extract-zip": "^1.7.0",
     "fs-extra": "^8.1.0",
     "glob": "10.4.5",
-    "typescript": "5.4.5",
+    "typescript": "5.7.2",
+    "typescript-eslint": "^8.30.1",
     "underscore": "^1.10.2",
-    "yargs-parser": "13.1.2",
-    "concurrently": "^9.1.2",
-    "eslint": "^9.18.0",
-    "@eslint/js": "^9.18.0",
-    "eslint-plugin-n": "^17.15.1",
-    "@typescript-eslint/eslint-plugin": "^8.21.0",
-    "@typescript-eslint/parser": "^8.21.0",
-    "globals": "15.14.0"
+    "yargs-parser": "13.1.2"
   },
   "engines": {
     "node": ">=16.0.0"
