--- a/templates/mle-js-basic/.env.example
+++ b/templates/mle-js-basic/.env.example
@@ -1,7 +1,3 @@
-# Path to database wallet
-WALLET_PATH=<%= walletPath %>
-
-
 # Database User
 DB_USER=<%= connectionUsername %>
 # Database User Password
@@ -9,7 +5,7 @@ DB_PASSWORD=<%= connectionPassword %>
 # Connection string to your Autonomous Database/
 # Oracle Database Free instance
 CONNECT_STRING=<%= connectionString %>
-
+MLE_MODULE=
 # Optional HTTP Proxy Settings
 # HTTPS_PROXY=
 # HTTPS_PROXY_PORT=
