--- a/templates/mle-js-basic/tsconfig.json
+++ b/templates/mle-js-basic/tsconfig.json
@@ -6,8 +6,7 @@
       "lib": ["es6", "es2017", "es2021"],
       "types": [],
       "noImplicitAny": true,
-      "strict": true,
-      "sourceMap": true
+      "strict": true
     },
     "include": ["src"],
     "exclude": ["node_modules"]
