feat: addressing PR comments

--- a/templates/mle-ts-sample/.env.example
+++ b/templates/mle-ts-sample/.env.example
@@ -1,12 +1,9 @@
-# Path to database wallet
-WALLET_PATH=<%= walletPath %>
-
 # Database User
 DB_USER=<%= connectionUsername %>
 # Database User Password
 DB_PASSWORD=<%= connectionPassword %>
 # Connection string to your Autonomous Database/
-# Oracle Database Free instance
+# Oracle Database instance
 CONNECT_STRING=<%= connectionString %>
 MLE_MODULE=
 # Optional HTTP Proxy Settings
