--- a/templates/mle-ts-sample/.env.example.wallet
+++ b/templates/mle-ts-sample/.env.example.wallet
@@ -1,9 +1,12 @@
+# Path to database wallet
+WALLET_PATH=<%= walletPath %>
+
 # Database User
 DB_USER=<%= connectionUsername %>
 # Database User Password
 DB_PASSWORD=<%= connectionPassword %>
 # Connection string to your Autonomous Database/
-# Oracle Database Free instance
+# Oracle Database instance
 CONNECT_STRING=<%= connectionString %>
 MLE_MODULE=
 # Optional HTTP Proxy Settings
