feat: review comments, dependabot label, vitest version

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -193,3 +193,6 @@ updates:
     directory: "/templates/mle-ts-sample/"
     schedule:
       interval: "monthly"
+    labels:
+      - "dependencies"
+      - "templates-mle"
