--- a/templates/mle-ts-sample/.env.example
+++ b/templates/mle-ts-sample/.env.example
@@ -5,6 +5,7 @@ DB_PASSWORD=<%= connectionPassword %>
 # Connection string to your Autonomous Database/
 # Oracle Database instance
 CONNECT_STRING=<%= connectionString %>
+# Oracle MLE Module name
 MLE_MODULE=
 # Optional HTTP Proxy Settings
 # HTTPS_PROXY=
