--- a/templates/mle-ts-sample/.env.example.wallet
+++ b/templates/mle-ts-sample/.env.example.wallet
@@ -8,6 +8,7 @@ DB_PASSWORD=<%= connectionPassword %>
 # Connection string to your Autonomous Database/
 # Oracle Database instance
 CONNECT_STRING=<%= connectionString %>
+# Oracle MLE Module name
 MLE_MODULE=
 # Optional HTTP Proxy Settings
 # HTTPS_PROXY=
