--- a/templates/mle-ts-sample/package.json
+++ b/templates/mle-ts-sample/package.json
@@ -6,7 +6,8 @@
         "typescript": "^5.7.3",
         "esbuild": "0.25.1",
         "oracledb": "^6.7.1",
-        "vitest": "^3.1.2"
+        "vitest": "^3.1.2",
+        "dotenv": "^16.5.0"
     },
     "scripts": {
         "build": "esbuild src/index.ts --bundle --minify=false --platform=neutral --format=esm --outfile=dist/index.js",
