--- a/templates/mle-ts-sample/.env.example.wallet
+++ b/templates/mle-ts-sample/.env.example.wallet
@@ -1,6 +1,6 @@
 # Path to database wallet
 WALLET_PATH=<%= walletPath %>
-
+WALLET_PASSWORD=<%= walletPassword %>
 # Database User
 DB_USER=<%= connectionUsername %>
 # Database User Password
